<resources>
    <string name="app_name">Prijatna Kafica</string>
    <string name="coffeeChemex">Chemex</string>
    <string name="coffeeMocca">Mocca</string>
    <string name="coffeeEspreeso">Espresso</string>
    <string name="coffeeFrenchPress">French Press</string>
    <string name="coffeeAero">AeroPress</string>
    <string name="coffeeV60">V60</string>
    <string name="back">X</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="preparation">Preparation</string>
    <string name="timer">Timer</string>
    <string name="info">Info</string>
    <string name="coffe_info">Coffee is a brewed drink prepared from roasted coffee beans, the seeds of berries from certain flowering plants in the Coffea genus. From the coffee fruit, the seeds are separated to produce a stable, raw product: unroasted green coffee. The seeds are then roasted, a process which transforms them into a consumable product: roasted coffee, which is ground into fine particles that are typically steeped in hot water before being filtered out, producing a cup of coffee. It can be prepared in dozens of ways, in this application we have instructions for 6 most common ways of brewing coffee: Chemex, V60, AeroPress, Espresso, French Press and Mocca pot. </string>
    <string name="swipe">Swipe for individual brewing method explanations</string>
    <string name="aboutFrenchPress">A French press, also known as a cafetière, cafetière à piston, caffettiera a stantuffo, press pot, coffee press, or coffee plunger, is a coffee brewing device, although it can also be used for other tasks. Coffee is brewed by placing coarsely ground coffee in the empty beaker and adding hot—between 93–96 °C (199–205 °F)—water, in proportions of about 30 g (1.1 oz) of coffee grounds to 500 ml (17 US fl oz) of water, more or less to taste.</string>
    <string name="aboutEspresso">Espresso is a coffee-brewing method of Italian origin, in which a small amount of nearly boiling water (about 90 °C or 190 °F) is forced under 9–10 bars (900–1,000 kPa; 130–150 psi) of pressure through finely-ground coffee beans. Espresso coffee can be made with a wide variety of coffee beans and roast degrees. Espresso is the most common way of making coffee in southern Europe, especially in Italy, France, Spain and Portugal. It is also popular in Switzerland, Croatia, Bulgaria and Greece, and in Australia.</string>
    <string name="aboutChemex">The Chemex Coffeemaker is a manual pour-over style glass coffeemaker, invented by Peter Schlumbohm in 1941, manufactured by the Chemex Corporation in Chicopee, Massachusetts. In 1958, designers at the Illinois Institute of Technology said that the Chemex Coffeemaker is "one of the best-designed products of modern times" and it is included in the collection of the Museum of Modern Art in New York City.</string>
    <string name="aboutAeroPress">The AeroPress is a manual coffeemaker invented by Alan Adler, founder of AeroPress, Inc. It consists of a cylindrical chamber, and a plunger with an airtight silicone seal, similar to a syringe. Ground coffee beans and water are steeped inside, then forced through a filter by pressing the plunger through the chamber. It is capable of brewing highly concentrated coffee, which the manufacturer describes as "espresso style", but can also be used to brew filter strength coffee, or cold brew coffee.</string>
    <string name="aboutV60">V60 is a pour-over cone made of plastic, ceramic, metal, or glass. It is produced by Hario, a Japanese company.It is available in 3 sizes: 01 (small: 1-2 cups), 02 (medium: 2-4 cups), 03 (large: 3-6 cups). Terms used for the resulting coffee often reflect the method used, such as drip brewed coffee, filtered coffee, pour-over coffee, immersion brewed coffee, or simply coffee. Water seeps through the ground coffee, absorbing its constituent chemical compounds, and then passes through a filter. The used coffee grounds are retained in the filter, while the brewed coffee is collected in a vessel such as a carafe or pot.</string>
    <string name="aboutMocca">The moka pot is a stove-top or electric coffee maker that brews coffee by passing boiling water pressurised by steam through ground coffee. Named after the Yemeni city of Mocha, it was invented by Italian engineer Alfonso Bialetti in 1933 and quickly became one of the staples of Italian culture. Bialetti Industries continues to produce the same model under the trade name "Moka Express". Spreading from Italy, the moka pot is today most commonly used in Europe and in Latin America.</string>
</resources>