<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <ImageButton
        android:id="@+id/chemex"
        android:layout_width="144dp"
        android:layout_height="152dp"
        android:contentDescription="@string/coffeeChemex"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135"
        app:srcCompat="@drawable/chemex"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/v60"
        android:layout_width="157dp"
        android:layout_height="149dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/coffeeV60"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.879"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.138"
        app:srcCompat="@drawable/v60"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/aero"
        android:layout_width="146dp"
        android:layout_height="173dp"
        android:contentDescription="@string/coffeeAero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483"
        app:srcCompat="@drawable/aero"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/espresso"
        android:layout_width="151dp"
        android:layout_height="156dp"
        android:contentDescription="@string/coffeeEspreeso"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.867"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496"
        app:srcCompat="@drawable/espresso"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/french"
        android:layout_width="135dp"
        android:layout_height="166dp"
        android:contentDescription="@string/coffeeFrenchPress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.864"
        app:srcCompat="@drawable/french"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/mocca"
        android:layout_width="144dp"
        android:layout_height="165dp"
        android:contentDescription="@string/coffeeMocca"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.853"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.864"
        app:srcCompat="@drawable/mocca"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/info"
        android:layout_width="71dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:text="@string/info"
        app:layout_constraintBottom_toTopOf="@+id/v60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>